# mini1

./: .gitignore  CMakeLists.txt  README.md
apps/: run_index_experiments.cpp  run_optimized.cpp  run_optimized_support_experiments.cpp  run_parallel.cpp  run_serial.cpp
configs/: phase1_dev_scenarios.csv  phase3_dev_scenarios.conf
docs/: TODO_PHASE1.md  TODO_PHASE2.md  TODO_PHASE3.md
docs/review/: BUILD_MATRIX_NOTES.md  GRAPHING_QOL_TODO.md  MASTER_REVIEW_STATUS.md  PHASE1_BENCHMARK_CONSISTENCY_20260309.md  PHASE1_DETAILED_REVIEW.md  PHASE1_DETAILED_REVIEW_D11_D15.md  PHASE1_DETAILED_REVIEW_D16_D20.md  PHASE1_DETAILED_REVIEW_D1_D5.md  PHASE1_DETAILED_REVIEW_D6_D10.md  PHASE2_BENCHMARK_CONSISTENCY_20260309.md  PHASE2_DETAILED_REVIEW.md  PHASE2_DETAILED_REVIEW_D11_D15.md  PHASE2_DETAILED_REVIEW_D16_D20.md  PHASE2_DETAILED_REVIEW_D1_D5.md  PHASE2_DETAILED_REVIEW_D21_D25.md  PHASE2_DETAILED_REVIEW_D26.md  PHASE2_DETAILED_REVIEW_D6_D10.md  PHASE3_ARTIFACT_MAP.md  PHASE3_BASELINE_PLAN.md  PHASE3_D2_HOTPATH_EVIDENCE.md  PHASE3_DETAILED_REVIEW_D11_D15.md  PHASE3_DETAILED_REVIEW_D18_D24.md  PHASE3_DETAILED_REVIEW_D1_D5.md  PHASE3_DETAILED_REVIEW_D25_D29.md  PHASE3_DETAILED_REVIEW_D6_D10.md  PHASE_DELIVERABLE_AUDIT.md  PHASE_DELIVERABLE_VERIFICATION.md  THOROUGH_CODE_REVIEW_TODO.md  TODO_EVIDENCE_AUDIT.md
include/benchmark/: BenchmarkHarness.hpp
include/data_model/: BuildingRecord.hpp  CommonCodes.hpp  GarageRecord.hpp  GeoPoint.hpp  TrafficColumns.hpp  TrafficDataset.hpp  TrafficDatasetOptimized.hpp  TrafficRecord.hpp
include/io/: BuildingLoader.hpp  CSVReader.hpp  CsvParseUtils.hpp  GarageLoader.hpp
include/query/: CongestionQuery.hpp  CrossDatasetIndex.hpp  OptimizedCongestionQuery.hpp  OptimizedQuerySupport.hpp  OptimizedTrafficAggregator.hpp  ParallelCongestionQuery.hpp  ParallelTrafficAggregator.hpp  TimeWindowQuery.hpp  TrafficAggregator.hpp
report/: notes.md  phase1_dev_benchmark_log.md  phase2_dev_benchmark_log.md  phase3_dev_benchmark_log.md  report.md
results/: report.html
results/graphs/phase1_dev/: chart_index.md
results/graphs/phase2_dev/: chart_index.md
results/graphs/phase3_dev/: chart_index.md
scripts/: audit_phase_deliverables.py  audit_todo_evidence.py  benchmark.sh  check_phase1_dev_determinism.py  check_phase2_dev_determinism.py  check_phase3_dev_completeness.py  check_phase3_dev_determinism.py  clean_benchmark_outputs.sh  configure_openmp_build.sh  generate_poster.py  generate_report.py  make_subsets.py  make_subsets.sh  plot_common.py  plot_phase1_dev.py  plot_phase2_dev.py  plot_phase3_dev.py  plot_results.py  run_all_phase_dev_benchmarks.sh  run_benchmark_matrix.sh  run_phase1_baseline.sh  run_phase1_dev_benchmarks.sh  run_phase2_baseline_benchmarks.sh  run_phase2_dev_benchmarks.sh  run_phase2_index_experiments.sh  run_phase2_subset_validation.sh  run_phase3_baseline_benchmarks.sh  run_phase3_baseline_reporting.sh  run_phase3_dev_benchmarks.sh  run_phase3_dev_reporting.sh  run_phase3_memory_probe.sh  run_phase3_step_matrix.sh  run_phase3_subset_validation.sh  run_subset_validation.sh  summarize_phase1_dev.py  summarize_phase2.py  summarize_phase2_dev.py  summarize_phase3_dev.py
src/benchmark/: BenchmarkHarness.cpp
src/data_model/: TrafficColumns.cpp  TrafficDataset.cpp  TrafficDatasetOptimized.cpp  TrafficRecord.cpp
src/io/: BuildingLoader.cpp  CSVReader.cpp  CsvParseUtils.cpp  GarageLoader.cpp
src/query/: CongestionQuery.cpp  CrossDatasetIndex.cpp  OptimizedCongestionQuery.cpp  OptimizedQuerySupport.cpp  OptimizedTrafficAggregator.cpp  ParallelCongestionQuery.cpp  ParallelTrafficAggregator.cpp  TimeWindowQuery.cpp  TrafficAggregator.cpp
tests/: test_benchmark_harness.cpp  test_cross_dataset_index.cpp  test_csv_reader.cpp  test_data_fixture.hpp  test_optimized_query_correctness.cpp  test_optimized_query_support.cpp  test_parallel_query_correctness.cpp  test_phase3_benchmark_policy_cli.cpp  test_phase3_reporting_guards.cpp  test_phase3_workflow_cli.cpp  test_plot_scripts_smoke.cpp  test_query_apis.cpp  test_realdata_api.cpp  test_realdata_ingest.cpp  test_realdata_integrated.cpp  test_run_index_experiments_cli.cpp  test_run_optimized_cli.cpp  test_run_optimized_support_experiments_cli.cpp  test_run_parallel_cli.cpp  test_run_serial_benchmark_cli.cpp  test_run_serial_queries.cpp  test_support_loaders.cpp  test_traffic_dataset.cpp
tests/fixtures/: phase1_plot_summary_fixture.csv  phase2_plot_summary_fixture.csv  phase3_plot_summary_fixture.csv
